parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_declaracoes
Rule 2     lista_declaracoes -> lista_declaracoes declaracao
Rule 3     lista_declaracoes -> declaracao
Rule 4     declaracao -> declaracao_variaveis
Rule 5     declaracao -> inicializacao_variaveis
Rule 6     declaracao -> declaracao_funcao
Rule 7     declaracao_variaveis -> tipo DOISPONTOS lista_variaveis
Rule 8     inicializacao_variaveis -> atribuicao
Rule 9     lista_variaveis -> lista_variaveis VIRGULA var
Rule 10    lista_variaveis -> var
Rule 11    var -> ID
Rule 12    var -> ID indice
Rule 13    indice -> indice ABRECOLCH expressao FECHACOLCH
Rule 14    indice -> ABRECOLCH expressao FECHACOLCH
Rule 15    tipo -> INTEIRO
Rule 16    tipo -> FLUTUANTE
Rule 17    declaracao_funcao -> tipo cabecalho
Rule 18    cabecalho -> ID ABREPAR lista_parametros FECHAPAR corpo FIM
Rule 19    lista_parametros -> lista_parametros VIRGULA lista_parametros
Rule 20    lista_parametros -> parametro
Rule 21    lista_parametros -> vazio
Rule 22    parametro -> tipo DOISPONTOS ID
Rule 23    parametro -> parametro ABRECOLCH FECHACOLCH
Rule 24    corpo -> corpo acao
Rule 25    corpo -> vazio
Rule 26    acao -> expressao
Rule 27    acao -> declaracao_variaveis
Rule 28    acao -> se
Rule 29    acao -> repita
Rule 30    acao -> leia
Rule 31    acao -> escreva
Rule 32    acao -> retorna
Rule 33    acao -> error
Rule 34    se -> SE expressao ENTAO corpo FIM
Rule 35    se -> SE expressao ENTAO corpo SENAO corpo FIM
Rule 36    repita -> REPITA corpo ATE expressao
Rule 37    atribuicao -> var ATRIBUICAO expressao
Rule 38    leia -> LEIA ABREPAR ID FECHAPAR
Rule 39    escreva -> ESCREVA ABREPAR expressao FECHAPAR
Rule 40    retorna -> RETORNA ABREPAR expressao FECHAPAR
Rule 41    expressao -> expressao_simples
Rule 42    expressao -> atribuicao
Rule 43    expressao_simples -> expressao_aditiva
Rule 44    expressao_simples -> expressao_simples operador_relacional expressao_aditiva
Rule 45    expressao_aditiva -> expressao_multiplicativa
Rule 46    expressao_aditiva -> expressao_aditiva operador_multiplicacao expressao_unaria
Rule 47    expressao_multiplicativa -> expressao_unaria
Rule 48    expressao_multiplicativa -> expressao_multiplicativa operador_multiplicacao expressao_unaria
Rule 49    expressao_unaria -> fator
Rule 50    expressao_unaria -> operador_soma fator
Rule 51    operador_relacional -> MENOR
Rule 52    operador_relacional -> MAIOR
Rule 53    operador_relacional -> IGUAL
Rule 54    operador_relacional -> DIFERENTE
Rule 55    operador_relacional -> MENORIGUAL
Rule 56    operador_relacional -> MAIORIGUAL
Rule 57    operador_relacional -> ELOGICO
Rule 58    operador_relacional -> OULOGICO
Rule 59    operador_relacional -> NEGACAO
Rule 60    operador_soma -> SOMA
Rule 61    operador_soma -> SUBR
Rule 62    operador_multiplicacao -> VEZES
Rule 63    operador_multiplicacao -> DIVIDE
Rule 64    fator -> ABREPAR expressao FECHAPAR
Rule 65    fator -> var
Rule 66    fator -> chamada_funcao
Rule 67    fator -> numero
Rule 68    numero -> INTEIRO
Rule 69    numero -> FLUTUANTE
Rule 70    chamada_funcao -> ID ABREPAR lista_argumentos FECHAPAR
Rule 71    lista_argumentos -> lista_argumentos VIRGULA expressao
Rule 72    lista_argumentos -> expressao
Rule 73    lista_argumentos -> vazio
Rule 74    vazio -> <empty>

Terminals, with rules where they appear

ABRECOLCH            : 13 14 23
ABREPAR              : 18 38 39 40 64 70
ATE                  : 36
ATRIBUICAO           : 37
DIFERENTE            : 54
DIVIDE               : 63
DOISPONTOS           : 7 22
ELOGICO              : 57
ENTAO                : 34 35
ESCREVA              : 39
FECHACOLCH           : 13 14 23
FECHAPAR             : 18 38 39 40 64 70
FIM                  : 18 34 35
FLUTUANTE            : 16 69
ID                   : 11 12 18 22 38 70
IGUAL                : 53
INTEIRO              : 15 68
LEIA                 : 38
MAIOR                : 52
MAIORIGUAL           : 56
MENOR                : 51
MENORIGUAL           : 55
NEGACAO              : 59
OULOGICO             : 58
REPITA               : 36
RETORNA              : 40
SE                   : 34 35
SENAO                : 35
SOMA                 : 60
SUBR                 : 61
VEZES                : 62
VIRGULA              : 9 19 71
error                : 33

Nonterminals, with rules where they appear

acao                 : 24
atribuicao           : 8 42
cabecalho            : 17
chamada_funcao       : 66
corpo                : 18 24 34 35 35 36
declaracao           : 2 3
declaracao_funcao    : 6
declaracao_variaveis : 4 27
escreva              : 31
expressao            : 13 14 26 34 35 36 37 39 40 64 71 72
expressao_aditiva    : 43 44 46
expressao_multiplicativa : 45 48
expressao_simples    : 41 44
expressao_unaria     : 46 47 48
fator                : 49 50
indice               : 12 13
inicializacao_variaveis : 5
leia                 : 30
lista_argumentos     : 70 71
lista_declaracoes    : 1 2
lista_parametros     : 18 19 19
lista_variaveis      : 7 9
numero               : 67
operador_multiplicacao : 46 48
operador_relacional  : 44
operador_soma        : 50
parametro            : 20 23
programa             : 0
repita               : 29
retorna              : 32
se                   : 28
tipo                 : 7 17 22
var                  : 9 10 37 65
vazio                : 21 25 73

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_declaracoes
    (2) lista_declaracoes -> . lista_declaracoes declaracao
    (3) lista_declaracoes -> . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . inicializacao_variaveis
    (6) declaracao -> . declaracao_funcao
    (7) declaracao_variaveis -> . tipo DOISPONTOS lista_variaveis
    (8) inicializacao_variaveis -> . atribuicao
    (17) declaracao_funcao -> . tipo cabecalho
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE
    (37) atribuicao -> . var ATRIBUICAO expressao
    (11) var -> . ID
    (12) var -> . ID indice

    INTEIRO         shift and go to state 9
    FLUTUANTE       shift and go to state 10
    ID              shift and go to state 12

    programa                       shift and go to state 1
    lista_declaracoes              shift and go to state 2
    declaracao                     shift and go to state 3
    declaracao_variaveis           shift and go to state 4
    inicializacao_variaveis        shift and go to state 5
    declaracao_funcao              shift and go to state 6
    tipo                           shift and go to state 7
    atribuicao                     shift and go to state 8
    var                            shift and go to state 11

state 1

    (0) S' -> programa .



state 2

    (1) programa -> lista_declaracoes .
    (2) lista_declaracoes -> lista_declaracoes . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . inicializacao_variaveis
    (6) declaracao -> . declaracao_funcao
    (7) declaracao_variaveis -> . tipo DOISPONTOS lista_variaveis
    (8) inicializacao_variaveis -> . atribuicao
    (17) declaracao_funcao -> . tipo cabecalho
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE
    (37) atribuicao -> . var ATRIBUICAO expressao
    (11) var -> . ID
    (12) var -> . ID indice

    $end            reduce using rule 1 (programa -> lista_declaracoes .)
    INTEIRO         shift and go to state 9
    FLUTUANTE       shift and go to state 10
    ID              shift and go to state 12

    declaracao                     shift and go to state 13
    declaracao_variaveis           shift and go to state 4
    inicializacao_variaveis        shift and go to state 5
    declaracao_funcao              shift and go to state 6
    tipo                           shift and go to state 7
    atribuicao                     shift and go to state 8
    var                            shift and go to state 11

state 3

    (3) lista_declaracoes -> declaracao .

    INTEIRO         reduce using rule 3 (lista_declaracoes -> declaracao .)
    FLUTUANTE       reduce using rule 3 (lista_declaracoes -> declaracao .)
    ID              reduce using rule 3 (lista_declaracoes -> declaracao .)
    $end            reduce using rule 3 (lista_declaracoes -> declaracao .)


state 4

    (4) declaracao -> declaracao_variaveis .

    INTEIRO         reduce using rule 4 (declaracao -> declaracao_variaveis .)
    FLUTUANTE       reduce using rule 4 (declaracao -> declaracao_variaveis .)
    ID              reduce using rule 4 (declaracao -> declaracao_variaveis .)
    $end            reduce using rule 4 (declaracao -> declaracao_variaveis .)


state 5

    (5) declaracao -> inicializacao_variaveis .

    INTEIRO         reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    FLUTUANTE       reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    ID              reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    $end            reduce using rule 5 (declaracao -> inicializacao_variaveis .)


state 6

    (6) declaracao -> declaracao_funcao .

    INTEIRO         reduce using rule 6 (declaracao -> declaracao_funcao .)
    FLUTUANTE       reduce using rule 6 (declaracao -> declaracao_funcao .)
    ID              reduce using rule 6 (declaracao -> declaracao_funcao .)
    $end            reduce using rule 6 (declaracao -> declaracao_funcao .)


state 7

    (7) declaracao_variaveis -> tipo . DOISPONTOS lista_variaveis
    (17) declaracao_funcao -> tipo . cabecalho
    (18) cabecalho -> . ID ABREPAR lista_parametros FECHAPAR corpo FIM

    DOISPONTOS      shift and go to state 14
    ID              shift and go to state 16

    cabecalho                      shift and go to state 15

state 8

    (8) inicializacao_variaveis -> atribuicao .

    INTEIRO         reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    FLUTUANTE       reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    ID              reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    $end            reduce using rule 8 (inicializacao_variaveis -> atribuicao .)


state 9

    (15) tipo -> INTEIRO .

    DOISPONTOS      reduce using rule 15 (tipo -> INTEIRO .)
    ID              reduce using rule 15 (tipo -> INTEIRO .)


state 10

    (16) tipo -> FLUTUANTE .

    DOISPONTOS      reduce using rule 16 (tipo -> FLUTUANTE .)
    ID              reduce using rule 16 (tipo -> FLUTUANTE .)


state 11

    (37) atribuicao -> var . ATRIBUICAO expressao

    ATRIBUICAO      shift and go to state 17


state 12

    (11) var -> ID .
    (12) var -> ID . indice
    (13) indice -> . indice ABRECOLCH expressao FECHACOLCH
    (14) indice -> . ABRECOLCH expressao FECHACOLCH

    ATRIBUICAO      reduce using rule 11 (var -> ID .)
    VIRGULA         reduce using rule 11 (var -> ID .)
    INTEIRO         reduce using rule 11 (var -> ID .)
    FLUTUANTE       reduce using rule 11 (var -> ID .)
    ID              reduce using rule 11 (var -> ID .)
    $end            reduce using rule 11 (var -> ID .)
    FIM             reduce using rule 11 (var -> ID .)
    error           reduce using rule 11 (var -> ID .)
    SE              reduce using rule 11 (var -> ID .)
    REPITA          reduce using rule 11 (var -> ID .)
    LEIA            reduce using rule 11 (var -> ID .)
    ESCREVA         reduce using rule 11 (var -> ID .)
    RETORNA         reduce using rule 11 (var -> ID .)
    ABREPAR         reduce using rule 11 (var -> ID .)
    SOMA            reduce using rule 11 (var -> ID .)
    SUBR            reduce using rule 11 (var -> ID .)
    ATE             reduce using rule 11 (var -> ID .)
    SENAO           reduce using rule 11 (var -> ID .)
    ABRECOLCH       shift and go to state 19

    indice                         shift and go to state 18

state 13

    (2) lista_declaracoes -> lista_declaracoes declaracao .

    INTEIRO         reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    FLUTUANTE       reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    ID              reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    $end            reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)


state 14

    (7) declaracao_variaveis -> tipo DOISPONTOS . lista_variaveis
    (9) lista_variaveis -> . lista_variaveis VIRGULA var
    (10) lista_variaveis -> . var
    (11) var -> . ID
    (12) var -> . ID indice

    ID              shift and go to state 12

    lista_variaveis                shift and go to state 20
    var                            shift and go to state 21

state 15

    (17) declaracao_funcao -> tipo cabecalho .

    INTEIRO         reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    FLUTUANTE       reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    ID              reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    $end            reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)


state 16

    (18) cabecalho -> ID . ABREPAR lista_parametros FECHAPAR corpo FIM

    ABREPAR         shift and go to state 22


state 17

    (37) atribuicao -> var ATRIBUICAO . expressao
    (41) expressao -> . expressao_simples
    (42) expressao -> . atribuicao
    (43) expressao_simples -> . expressao_aditiva
    (44) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (37) atribuicao -> . var ATRIBUICAO expressao
    (45) expressao_aditiva -> . expressao_multiplicativa
    (46) expressao_aditiva -> . expressao_aditiva operador_multiplicacao expressao_unaria
    (11) var -> . ID
    (12) var -> . ID indice
    (47) expressao_multiplicativa -> . expressao_unaria
    (48) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (49) expressao_unaria -> . fator
    (50) expressao_unaria -> . operador_soma fator
    (64) fator -> . ABREPAR expressao FECHAPAR
    (65) fator -> . var
    (66) fator -> . chamada_funcao
    (67) fator -> . numero
    (60) operador_soma -> . SOMA
    (61) operador_soma -> . SUBR
    (70) chamada_funcao -> . ID ABREPAR lista_argumentos FECHAPAR
    (68) numero -> . INTEIRO
    (69) numero -> . FLUTUANTE

    ID              shift and go to state 30
    ABREPAR         shift and go to state 33
    SOMA            shift and go to state 36
    SUBR            shift and go to state 37
    INTEIRO         shift and go to state 38
    FLUTUANTE       shift and go to state 39

    var                            shift and go to state 23
    expressao                      shift and go to state 24
    expressao_simples              shift and go to state 25
    atribuicao                     shift and go to state 26
    expressao_aditiva              shift and go to state 27
    expressao_multiplicativa       shift and go to state 28
    expressao_unaria               shift and go to state 29
    fator                          shift and go to state 31
    operador_soma                  shift and go to state 32
    chamada_funcao                 shift and go to state 34
    numero                         shift and go to state 35

state 18

    (12) var -> ID indice .
    (13) indice -> indice . ABRECOLCH expressao FECHACOLCH

    ATRIBUICAO      reduce using rule 12 (var -> ID indice .)
    VIRGULA         reduce using rule 12 (var -> ID indice .)
    INTEIRO         reduce using rule 12 (var -> ID indice .)
    FLUTUANTE       reduce using rule 12 (var -> ID indice .)
    ID              reduce using rule 12 (var -> ID indice .)
    $end            reduce using rule 12 (var -> ID indice .)
    FIM             reduce using rule 12 (var -> ID indice .)
    error           reduce using rule 12 (var -> ID indice .)
    SE              reduce using rule 12 (var -> ID indice .)
    REPITA          reduce using rule 12 (var -> ID indice .)
    LEIA            reduce using rule 12 (var -> ID indice .)
    ESCREVA         reduce using rule 12 (var -> ID indice .)
    RETORNA         reduce using rule 12 (var -> ID indice .)
    ABREPAR         reduce using rule 12 (var -> ID indice .)
    SOMA            reduce using rule 12 (var -> ID indice .)
    SUBR            reduce using rule 12 (var -> ID indice .)
    ATE             reduce using rule 12 (var -> ID indice .)
    SENAO           reduce using rule 12 (var -> ID indice .)
    VEZES           reduce using rule 12 (var -> ID indice .)
    DIVIDE          reduce using rule 12 (var -> ID indice .)
    MENOR           reduce using rule 12 (var -> ID indice .)
    MAIOR           reduce using rule 12 (var -> ID indice .)
    IGUAL           reduce using rule 12 (var -> ID indice .)
    DIFERENTE       reduce using rule 12 (var -> ID indice .)
    MENORIGUAL      reduce using rule 12 (var -> ID indice .)
    MAIORIGUAL      reduce using rule 12 (var -> ID indice .)
    ELOGICO         reduce using rule 12 (var -> ID indice .)
    OULOGICO        reduce using rule 12 (var -> ID indice .)
    NEGACAO         reduce using rule 12 (var -> ID indice .)
    FECHACOLCH      reduce using rule 12 (var -> ID indice .)
    FECHAPAR        reduce using rule 12 (var -> ID indice .)
    ENTAO           reduce using rule 12 (var -> ID indice .)
    ABRECOLCH       shift and go to state 40


state 19

    (14) indice -> ABRECOLCH . expressao FECHACOLCH
    (41) expressao -> . expressao_simples
    (42) expressao -> . atribuicao
    (43) expressao_simples -> . expressao_aditiva
    (44) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (37) atribuicao -> . var ATRIBUICAO expressao
    (45) expressao_aditiva -> . expressao_multiplicativa
    (46) expressao_aditiva -> . expressao_aditiva operador_multiplicacao expressao_unaria
    (11) var -> . ID
    (12) var -> . ID indice
    (47) expressao_multiplicativa -> . expressao_unaria
    (48) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (49) expressao_unaria -> . fator
    (50) expressao_unaria -> . operador_soma fator
    (64) fator -> . ABREPAR expressao FECHAPAR
    (65) fator -> . var
    (66) fator -> . chamada_funcao
    (67) fator -> . numero
    (60) operador_soma -> . SOMA
    (61) operador_soma -> . SUBR
    (70) chamada_funcao -> . ID ABREPAR lista_argumentos FECHAPAR
    (68) numero -> . INTEIRO
    (69) numero -> . FLUTUANTE

    ID              shift and go to state 30
    ABREPAR         shift and go to state 33
    SOMA            shift and go to state 36
    SUBR            shift and go to state 37
    INTEIRO         shift and go to state 38
    FLUTUANTE       shift and go to state 39

    expressao                      shift and go to state 41
    expressao_simples              shift and go to state 25
    atribuicao                     shift and go to state 26
    expressao_aditiva              shift and go to state 27
    var                            shift and go to state 23
    expressao_multiplicativa       shift and go to state 28
    expressao_unaria               shift and go to state 29
    fator                          shift and go to state 31
    operador_soma                  shift and go to state 32
    chamada_funcao                 shift and go to state 34
    numero                         shift and go to state 35

state 20

    (7) declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .
    (9) lista_variaveis -> lista_variaveis . VIRGULA var
